--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
+    "joi": "^17.7.0",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
     "npm": "^9.4.2"
