--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "joi": "^17.7.0",
     "mongoose": "^6.9.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "npm": "^9.4.2"
   }
